--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-NELAKUDITI NIKHIL CHAND
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta Charset="UTF-8">
+        <meta http-equiv="x-UA-Compatible" contents="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>Document</title>
+        <style>
+            table {
+                border-collapse: collapse;
+            }
+            
+            th, td {
+                border: 2px solid black;
+                padding: 8px;
+            }
+            
+            th {
+                background-color: lightgray;
+            }
+        </style>
+    </head>
+    <body>
+        NELAKUDITI NIKHIL CHAND
+        <center>
+        <table>
+            <thead>
+            <tr>
+                <th>SR</th>
+                <th>DATE</th>
+                <th>TASK</th>
+                <th>DESCRIPTION</th>
+                <th>LINK</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>1</th>
+                <th>26th</th>
+                <th>mentorpick sums</th>
+                <th>1.
+                    2.
+                    3.
+
+                </th>
+                <th><a href=""></a></th>
+            </tr>
+        </tbody>
+        </table>
+    </center>
+    </body>
+</html>
